--- a/Main code/GEM/GEM/Pages/cameraPage.xaml
+++ b/Main code/GEM/GEM/Pages/cameraPage.xaml
@@ -11,6 +11,7 @@
                    Placeholder="enter barcode"
                    TextChanged="OnTextChanged"/>
             <Label x:Name="productNameText"/>
+            
             <Button Text="Scan"
                     x:Name="scanButton"
                     Clicked="Button_Clicked"
@@ -18,6 +19,7 @@
                     Margin="15"
                     BackgroundColor="#C0C0C0"
                     HorizontalOptions="Center"/>
+            
             <Picker x:Name="compartmentPicker" 
                     Title="Select compartment"
                     TitleColor="Black"
@@ -25,34 +27,35 @@
                     HorizontalOptions="FillAndExpand"
                     BackgroundColor="#C0C0C0"
                     SelectedIndexChanged="Selected_Changed"
-                    IsVisible="false"/>
-            <Label Text="Production or buy date" 
-                   x:Name="hidden1"
-                   IsVisible="false"/>
-            <DatePicker VerticalOptions="CenterAndExpand"
-                        x:Name="startTime"
-                        IsVisible="false">
-                <DatePicker.Format>dd-MM-yyyy</DatePicker.Format>
-            </DatePicker>
+                    IsVisible="false">
+            </Picker>
+
+            <Picker x:Name="quantity" IsVisible="false"/>
+            
+            <Switch x:Name="mySwitch" IsVisible="false" Toggled="switch_Toggled"/>
+
             <Label Text="Expiration date"
-                   x:Name="hidden4"
+                   x:Name="expLabel"
                    IsVisible="false"/>
+            
             <DatePicker VerticalOptions="CenterAndExpand"
                         x:Name="expDate"
                         IsVisible="false">
                 <DatePicker.Format>dd-MM-yyyy</DatePicker.Format>
             </DatePicker>
+            
             <Button Text="Cancel"
                     Clicked="Cancel_Clicked"
-                    x:Name="hidden2"
+                    x:Name="cancelButton"
                     CornerRadius="5"
                     Margin="15"
                     BackgroundColor="#C0C0C0"
                     HorizontalOptions="Center"
                     IsVisible="false"/>
+            
             <Button Text="Add Product"
                     Clicked="AddProduct_Clicked"
-                    x:Name="hidden3"
+                    x:Name="addButton"
                     CornerRadius="5"
                     Margin="15"
                     BackgroundColor="#C0C0C0"
